--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,4 +1,5 @@
 @use './variables.scss' as var;
+@use './mixins.scss' as mix;
 
 .footer {
   border-top: 1px solid var.$accent-color;
@@ -10,6 +11,13 @@
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+  }
+
+  .social__github.hidden-on-mobile a {
+    position: relative;
+    &::after {
+      @include mix.after-underline;
+    }
   }
 
   .social {
@@ -45,7 +53,7 @@
   }
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .social__github:hover svg,
   .social__linkedin:hover svg {
     fill: var.$accent-color;
@@ -53,5 +61,9 @@
 
   .social__github:hover {
     color: var.$accent-color;
+  }
+
+  .social__github.hidden-on-mobile a:hover::after {
+    transform: scaleX(1);
   }
 }
