--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -32,17 +32,6 @@
     align-items: center;
     display: flex;
 
-    // &::before {
-    //   content: '▼';
-    //   font-size: 10px;
-    //   position: absolute;
-    //   top: 50%;
-    //   right: 0;
-    //   transform: translateY(-50%);
-    //   pointer-events: none;
-    //   transition: var.$transition;
-    // }
-
     label {
       width: 0;
       height: 0;
@@ -80,15 +69,7 @@
   position: relative;
 
   &::after {
-    content: '';
-    position: absolute;
-    bottom: 1px;
-    left: 0;
-    transform: scaleX(0);
-    width: 100%;
-    height: 2px;
-    background-color: var.$accent-color;
-    transition: var.$transition;
+    @include mix.after-underline;
   }
 }
 
@@ -98,7 +79,7 @@
   cursor: pointer;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .nav__courses-dropdown:hover .courses {
     @include mix.visible;
   }
