--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -39,3 +39,28 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+@mixin title {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 125%;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+@mixin btn-disabled {
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+@mixin after-underline {
+  content: '';
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  transform: scaleX(0);
+  width: 100%;
+  height: 2px;
+  background-color: var.$accent-color;
+  transition: var.$transition;
+}
