--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -42,6 +42,10 @@
     position: relative;
     flex: 1 0 100%;
 
+    figure {
+      height: 100%;
+    }
+
     img {
       height: 100%;
       object-fit: cover;
