--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,11 @@
 $main-color: #0c0c0c;
 $light-grey: #f9f4fc;
 $dark-grey: #4c4451;
-$medium-grey: #827d84;
+$medium-grey: #9c999d;
 $white: #fff;
 $accent-color: #491067;
 $box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 90%);
 $overlay-bg: rgb(0 0 0 / 50%);
 $transition: 0.3s ease-in-out;
+$slider-transition: all 1s ease;
+$slides-gap: 10px;
