feat: disable current page link

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -81,6 +81,10 @@
   cursor: pointer;
 }
 
+.disabled-link {
+  @include mix.btn-disabled;
+}
+
 @media (hover: hover) and (pointer: fine) {
   .nav__courses-dropdown:hover .courses {
     @include mix.visible;
