--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -43,6 +43,10 @@
       border-top: 10px solid var.$main-color;
       cursor: pointer;
     }
+
+    &.disabled-link label {
+      transform: rotate(0deg);
+    }
   }
 
   .courses {
