--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -59,7 +59,8 @@ ul li a {
 
 .main {
   @include mix.container;
-
+  display: flex;
+  flex-direction: column;
   width: 100%;
   flex: 1;
   position: relative;
