--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,9 +1,91 @@
+@use './mixins.scss' as mix;
+@use './variables.scss' as var;
+
 .gallery {
   display: flex;
   flex: 1;
+
   &__container {
     padding: 25px 0;
     flex-direction: column;
     flex: 1;
+  }
+
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+  }
+
+  &__card {
+    position: relative;
+    flex: 1 1 300px;
+    box-shadow: var.$box-shadow;
+    border-radius: 1rem;
+    overflow: hidden;
+    border: 2px solid var.$accent-color;
+
+    figure {
+      width: 100%;
+    }
+
+    .ratio-box {
+      width: 100%;
+      height: 0;
+      padding-top: calc(100% * (1 / 1));
+      position: relative;
+      overflow: hidden;
+
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        transition: var.$transition;
+      }
+    }
+  }
+}
+
+.course-info {
+  padding: 15px 10px 10px;
+
+  &__difficulty span {
+    font-weight: 500;
+  }
+}
+
+.course-info__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  color: var.$accent-color;
+  margin-bottom: 15px;
+}
+
+.course-info__description {
+  @include mix.clip-description;
+  max-width: 300px;
+  margin-bottom: 10px;
+}
+
+.course-info__link {
+  @include mix.course-link;
+}
+
+// DETAILS PAGE
+.gallery__card.details_open {
+  .course-info {
+  }
+
+  .course-info__link {
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .course-info__link:hover .ratio-box img {
+    transform: scale(1.05);
   }
 }
