--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -87,3 +87,19 @@
   background-color: var.$accent-color;
   transition: var.$transition;
 }
+
+@mixin clip-description {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 90%;
+}
+
+@mixin course-link {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
