--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -16,13 +16,15 @@
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
+    margin-bottom: 20px;
   }
 
   &__card {
     position: relative;
     flex: 1 1 300px;
+    max-width: 450px;
     box-shadow: var.$box-shadow;
-    border-radius: 1rem;
+    border-radius: 10px;
     overflow: hidden;
     border: 2px solid var.$accent-color;
 
