--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -65,3 +65,13 @@ ul li a {
   flex: 1;
   position: relative;
 }
+
+.notFound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+}
