feat: implement category filtering

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -20,6 +20,10 @@
     align-items: center;
     flex-shrink: 0;
   }
+
+  .courses-category__item[value='select category'] {
+    display: none;
+  }
 }
 
 .nav {
