feat: add sorting The items can be sorted by three fields: Title; Category; Difficulty Level; Currently, the sorting is applied in one direction (ascending)

--- a/src/styles/_courseFilter.scss
+++ b/src/styles/_courseFilter.scss
@@ -2,7 +2,8 @@
 @use './mixins.scss' as mix;
 
 .actions {
-  &__select-wrap {
+  &__select-wrap,
+  &__sort-wrap {
     position: relative;
 
     @media (max-width: 600px) {
