--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -27,11 +27,17 @@
   }
 
   &__map {
+    flex: 1 1 48%;
     box-shadow: var.$box-shadow;
+    & iframe {
+      width: 100%;
+      height: 400px;
+    }
   }
 }
 
 .info {
+  flex: 1 1 48%;
   &__title {
     font-size: 24px;
     width: 90%;
@@ -100,5 +106,12 @@
   &__img-wrap img {
     height: 100%;
     object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .contacts__info-wrap,
+  .about__content {
+    flex-direction: column;
   }
 }
