--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -71,6 +71,10 @@
     box-shadow: var.$box-shadow;
     border-radius: 10px;
   }
+
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
 .nav__item {
@@ -111,12 +115,77 @@
   }
 }
 
-@media (hover: none) {
+@media (hover: hover) and (pointer: fine) {
   .nav__courses-dropdown input:checked ~ .courses {
     @include mix.visible;
   }
 
   .nav__courses-dropdown input:checked ~ label {
     transform: rotate(180deg);
+  }
+}
+
+.header__burger {
+  display: none;
+  @media (max-width: 500px) {
+    & {
+      padding: 0;
+      display: block;
+      border: none;
+      flex: 0 0 40px;
+      height: 20px;
+      position: relative;
+      z-index: 5;
+      background-color: transparent;
+      margin-left: 40px;
+      cursor: pointer;
+
+      & span,
+      &::before,
+      &::after {
+        content: '';
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background-color: var.$main-color;
+        transition: var.$transition;
+      }
+
+      &::before {
+        top: 0;
+      }
+
+      &::after {
+        top: 100%;
+      }
+
+      @media (hover: hover) and (pointer: fine) {
+        &:hover {
+          span,
+          &::before,
+          &::after {
+            background-color: var.$accent-color;
+          }
+        }
+      }
+    }
+  }
+
+  &-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background-color: var.$main-color;
+
+    &.active-overlay {
+      display: block;
+    }
   }
 }
