--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -13,6 +13,7 @@
 
 .contacts {
   margin-bottom: 50px;
+
   &__container {
     flex-direction: column;
   }
@@ -29,6 +30,7 @@
   &__map {
     flex: 1 1 48%;
     box-shadow: var.$box-shadow;
+
     & iframe {
       width: 100%;
       height: 400px;
@@ -38,6 +40,7 @@
 
 .info {
   flex: 1 1 48%;
+
   &__title {
     font-size: 24px;
     width: 90%;
@@ -109,7 +112,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
   .contacts__info-wrap,
   .about__content {
     flex-direction: column;
