--- a/src/styles/_courseFilter.scss
+++ b/src/styles/_courseFilter.scss
@@ -6,7 +6,7 @@
   &__sort-wrap {
     position: relative;
 
-    @media (max-width: 600px) {
+    @media (width <= 600px) {
       flex: 1;
       width: 100%;
     }
@@ -29,11 +29,11 @@
       line-height: 22px;
       height: 50px;
       padding: 10px;
+
       @include mix.border-shadow;
+
       width: 100%;
       appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
       cursor: pointer;
       padding-right: 30px;
     }
