--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,6 +5,7 @@
   border-bottom: 1px solid var.$accent-color;
   box-shadow: var.$box-shadow;
   background-color: var.$light-grey;
+  position: relative;
 
   &__container {
     height: 100px;
@@ -74,6 +75,30 @@
 
   @media (width <= 500px) {
     display: none;
+
+    &.header__nav_open {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 0%;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      background-color: var.$light-grey;
+      padding: 30px;
+
+      li {
+        width: max-content;
+      }
+
+      & .courses {
+        left: 0;
+
+        li {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
@@ -133,12 +158,14 @@
       padding: 0;
       display: block;
       border: none;
-      flex: 0 0 40px;
+      width: 40px;
       height: 20px;
-      position: relative;
-      z-index: 5;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 20px;
+      z-index: 10;
       background-color: transparent;
-      margin-left: 40px;
       cursor: pointer;
 
       & span,
@@ -163,6 +190,20 @@
         top: 100%;
       }
 
+      &.menu-open::before {
+        transform: rotate(-45deg);
+        top: calc(50% - 2px);
+      }
+
+      &.menu-open span {
+        width: 0;
+      }
+
+      &.menu-open::after {
+        transform: rotate(45deg);
+        top: calc(50% - 2px);
+      }
+
       @media (hover: hover) and (pointer: fine) {
         &:hover {
           span,
@@ -174,8 +215,10 @@
       }
     }
   }
+}
 
-  &-overlay {
+@media (width <= 500px) {
+  .header__burger-overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -183,9 +226,9 @@
     width: 100vw;
     height: 100vh;
     z-index: 3;
-    background-color: var.$main-color;
+    background-color: var.$overlay-bg;
 
-    &.active-overlay {
+    &.menu-open {
       display: block;
     }
   }
