--- a/src/styles/_courseFilter.scss
+++ b/src/styles/_courseFilter.scss
@@ -38,4 +38,9 @@
       padding-right: 30px;
     }
   }
+
+  &__select-wrap.disabled,
+  &__sort-wrap.disabled {
+    @include mix.btn-disabled;
+  }
 }
