--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -140,7 +140,7 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (hover: none) {
   .nav__courses-dropdown input:checked ~ .courses {
     @include mix.visible;
   }
