--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -6,7 +6,7 @@
   flex: 1;
 
   &__container {
-    max-width: 100%;
+    width: 100%;
     padding: 25px 0;
     flex-direction: column;
     flex: 1;
@@ -91,8 +91,6 @@
 .course-info__link {
   @include mix.course-link;
 }
-
-// DETAILS PAGE
 
 @media (hover: hover) and (pointer: fine) {
   .course-info__link:hover .ratio-box img {
