--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,11 +3,11 @@
 
 @mixin container {
   max-width: 1600px;
-  padding: 0 20px;
+  padding: 50px 20px;
   margin: 0 auto;
 
   @media screen and (width <= 550px) {
-    padding: 0 10px;
+    padding: 20px 10px;
   }
 }
 
@@ -41,6 +41,11 @@
   transition: var.$transition;
   cursor: pointer;
 
+  @media screen and (width <= 550px) {
+    width: 40px;
+    height: 40px;
+  }
+
   @media (hover: hover) and (pointer: fine) {
     &:hover {
       background-color: var.$medium-grey;
@@ -73,8 +78,7 @@
   font-size: 68px;
   font-weight: 700;
   line-height: 125%;
-  text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 
   span {
     color: var.$accent-color;
