--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,4 @@ $overlay-bg: rgb(0 0 0 / 50%);
 $transition: 0.3s ease-in-out;
 $slider-transition: all 1s ease;
 $slides-gap: 10px;
+$default-bg: transparent;
