--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -20,6 +20,8 @@
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    transition: all 0.8s;
+    z-index: 11;
   }
 
   .courses-category__item[value='select category'] {
@@ -33,7 +35,6 @@
   gap: 20px;
 
   &__courses-dropdown {
-    padding-right: 15px;
     align-items: center;
     display: flex;
 
@@ -74,18 +75,20 @@
   }
 
   @media (width <= 500px) {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: -500%;
+    left: 0;
+    right: 0;
+    background-color: var.$light-grey;
+    transition: var.$transition;
+    z-index: 10;
 
     &.header__nav_open {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 0%;
-      left: 0;
-      right: 0;
-      z-index: 10;
-      background-color: var.$light-grey;
-      padding: 30px;
+      padding: 100px 30px 30px;
+      top: 0;
+      align-items: flex-end;
 
       li {
         width: max-content;
@@ -223,17 +226,21 @@
 
 @media (width <= 500px) {
   .header__burger-overlay {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 3;
+    z-index: -1;
     background-color: var.$overlay-bg;
+    transition: var.$transition;
 
     &.menu-open {
-      display: block;
+      visibility: visible;
+      opacity: 1;
+      z-index: 3;
     }
   }
 }
