--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $medium-grey: #9c999d;
 $white: #fff;
 $accent-color: #491067;
 $box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 90%);
+$img-shadow: 0px 0px 10px 0px #49106782;
 $overlay-bg: rgb(0 0 0 / 50%);
 $transition: 0.3s ease-in-out;
 $slider-transition: all 1s ease;
