--- a/src/styles/_mentors.scss
+++ b/src/styles/_mentors.scss
@@ -43,6 +43,7 @@
           border-radius: 10px;
           box-shadow: var.$box-shadow;
           height: 100%;
+          aspect-ratio: 1 / 1;
           object-fit: cover;
         }
       }
