--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -21,7 +21,7 @@
     align-items: center;
     flex-shrink: 0;
     transition: all 0.8s;
-    z-index: 11;
+    z-index: 12;
   }
 
   .courses-category__item[value='select category'] {
@@ -30,9 +30,11 @@
 }
 
 .nav {
-  position: relative;
-  display: flex;
-  gap: 20px;
+  &__items {
+    position: relative;
+    display: flex;
+    gap: 20px;
+  }
 
   &__courses-dropdown {
     align-items: center;
@@ -75,17 +77,21 @@
   }
 
   @media (width <= 500px) {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: -500%;
-    left: 0;
-    right: 0;
-    background-color: var.$light-grey;
-    transition: var.$transition;
-    z-index: 10;
+    & {
+      position: absolute;
+      top: -500%;
+      left: 0;
+      right: 0;
+    }
+
+    &__items {
+      flex-direction: column;
+    }
 
     &.header__nav_open {
+      background-color: var.$light-grey;
+      transition: var.$transition;
+      z-index: 11;
       padding: 100px 30px 30px;
       top: 0;
       align-items: flex-end;
@@ -171,7 +177,7 @@
       top: 50%;
       transform: translateY(-50%);
       right: 20px;
-      z-index: 10;
+      z-index: 11;
       background-color: transparent;
       cursor: pointer;
 
