feat: add loader

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -30,6 +30,10 @@
   }
 }
 
+@mixin base-button {
+  @extend %base-button;
+}
+
 @mixin button-styles($bg-color) {
   & {
     @extend %base-button;
