refactor: simulate asynchronous fetching

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,6 +1,12 @@
 @use './mixins.scss' as mix;
 @use './variables.scss' as var;
 
+body.loading {
+  .show-more-btn {
+    display: none;
+  }
+}
+
 .gallery {
   display: flex;
   flex: 1;
